Opened 19 years ago
Closed 18 years ago
#637 closed bug (fixed)
[shutdown] doesn't draw gray box
Reported by: | diver | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Shutdown window doesn't draw fancy gray box where closing app's icons are shown as in BeOS.
Attachments (1)
Change History (4)
by , 19 years ago
Attachment: | shutdown_2.PNG added |
---|
comment:1 by , 18 years ago
Summary: | [bin: shutdown] doesn't draw gray box → [shutdown] doesn't draw gray box |
---|
comment:2 by , 18 years ago
Component: | Applications → Tools, Utilities, and other Binaries |
---|
comment:3 by , 18 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
Resolution: | → fixed |
Status: | new → closed |
fixed in hrev20395
Note:
See TracTickets
for help on using tickets.
shutdown