fixed bug #637: "Shutdown window didn't draw fancy gray box where closing app's icons are shown as in BeOS."

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20395 a95241bf-73f2-0310-859d-f6bbb57e9c96